--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,14 @@
 .App-link {
   color: #09d3ac;
 }
+
+.everything-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.single-box{
+  margin: 5px 0;
+}
